--- a/error-central/src/app/home/home.component.html
+++ b/error-central/src/app/home/home.component.html
@@ -1,10 +1,12 @@
 <mat-toolbar class="main-toolbar" color="primary">
   <span>Error Central</span>
   <div class="sign-section">
-    <button id="cadastro" mat-button [routerLink]="'/cadastro'">
+    <!-- <button id="cadastro" mat-button [routerLink]="'/cadastro'"> -->
+    <button id="cadastro" mat-button (click)="openRegisterDialog()">
       Cadastro
     </button>
-    <button id="login" mat-button [routerLink]="'/login'">
+    <!-- <button id="login" mat-button [routerLink]="'/login'"> -->
+    <button id="login" mat-button (click)="openLoginDialog()">
       Login
     </button>
   </div>
@@ -12,7 +14,7 @@
 <div class="content">
   <div class="main-content">
   <span id="welcome" class="mat-h1">Bem vindo(a) ao Error Central!</span><br>
-  <span class="mat-h2">Monitore seus logs de forma centralizada e organizada, cadastre-se!<br>Ou incorpore essa API ao
+  <span class="mat-h2">Monitore seus logs de forma centralizada e organizada, cadastre-se!<br>Incorpore essa API ao
     seu projeto.<br> Acesse o projeto e a documentação no
     <a href="" (click)="openGithub()">Github</a>
   </span>
