--- a/error-central/src/app/home/home.component.html
+++ b/error-central/src/app/home/home.component.html
@@ -1,9 +1,13 @@
 <div class="content">
   <div class="main-content">
-    <span id="welcome" class="mat-h1">Bem vindo(a) ao Error Central!</span><br>
-    <span class="mat-h2">Monitore seus logs de forma centralizada e organizada, cadastre-se!<br>Incorpore essa API ao
-      seu projeto.<br> Acesse o projeto e a documentação no
-      <a href="" (click)="openGithub()">Github</a>
-    </span>
+    <img id="prr" src="../../assets/gifs/prrr.gif" />
+    <div>
+      <span id="welcome" class="mat-h1">Bem vindo(a) ao Error Central!</span><br>
+      <span id="welcome-content" class="mat-h2">Monitore seus logs de forma centralizada e organizada,
+        cadastre-se!<br>Incorpore essa API ao
+        seu projeto.<br> Acesse o projeto e a documentação no
+        <a href="" (click)="openGithub()">Github</a>
+      </span>
+    </div>
   </div>
 </div>
