bug fix: mandando model para dialog de detalhe ao invés de buscar no componente filho

--- a/error-central/src/app/core/error-page/error-page.component.html
+++ b/error-central/src/app/core/error-page/error-page.component.html
@@ -71,7 +71,7 @@
             <ng-container matColumnDef="details">
                 <mat-header-cell *matHeaderCellDef> Detalhes </mat-header-cell>
                 <mat-cell *matCellDef="let element">
-                    <button mat-button (click)="openLoginDialog(element.eventID)">
+                    <button mat-button (click)="getEventDetails(element.eventID)">
                         <i class="material-icons">info</i>
                     </button>
                 </mat-cell>
