--- a/error-central/src/app/core/error-response/error-response.component.html
+++ b/error-central/src/app/core/error-response/error-response.component.html
@@ -16,8 +16,7 @@
                     <mat-icon id="debug" *ngIf="data.level === 'DEBUG'"
                         style="-webkit-text-fill-color:rgb(25, 25, 112)">
                         bug_report</mat-icon>
-                    <mat-icon id="warn" *ngIf="data.level === 'WARN'" style="-webkit-text-fill-color:orange">
-                        warning
+                    <mat-icon id="warn" *ngIf="data.level === 'WARNING'" style="-webkit-text-fill-color:orange">warning
                     </mat-icon>
                     <mat-icon id="error" *ngIf="data.level === 'ERROR'" style="-webkit-text-fill-color:red">error
                     </mat-icon>
