--- a/error-central/src/app/register/register.component.html
+++ b/error-central/src/app/register/register.component.html
@@ -8,7 +8,7 @@
       </mat-form-field>
 
       <mat-form-field class="field">
-        <input id="nome" name="email" matInput placeholder="e-mail" [(ngModel)]="data.email" email="true">
+        <input id="email" name="email" matInput placeholder="e-mail" [(ngModel)]="data.email" email="true">
       </mat-form-field>
 
       <mat-form-field class="field">
