Agrupamento e progresso ao carregar dados

--- a/src/app/core/error-page/error-page.component.html
+++ b/src/app/core/error-page/error-page.component.html
@@ -1,41 +1,15 @@
+<app-loader *ngIf="isLoading"></app-loader>
 <mat-card class="container">
     <mat-card-subtitle class="card-subtitle">
         <div class="container-filters">
-            <div class="selectors">
-                <mat-label>Agrupar</mat-label>
-                <div>
-                    <mat-form-field appearance="outline" class="selectForm">
-                        <mat-label>Ambiente</mat-label>
-                        <mat-select id="ambiente" [(ngModel)]="selectedEnvironment" name="ambiente">
-                            <mat-option></mat-option>
-                            <mat-option *ngFor="let item of environments" [value]="item">
-                                {{ item }}
-                            </mat-option>
-                        </mat-select>
-                    </mat-form-field>
 
-                    <mat-form-field appearance="outline" class="selectForm">
-                        <mat-label>Ordenar por</mat-label>
-                        <mat-select id="ordem" [(ngModel)]="selectedOrderby" name="ordem">
-                            <mat-option></mat-option>
-                            <mat-option *ngFor="let item of orderFields" [value]="item">
-                                {{ item }}
-                            </mat-option>
-                        </mat-select>
-                    </mat-form-field>
-                </div>
-            </div>
             <div class="selectors">
-                <mat-label>Filtrar <button mat-button *ngIf="selectedSearch" matSuffix mat-icon-button
-                        aria-label="Clear" (click)="onSearch() || selectedSearch=''" tabindex=2>
-                        <i class="material-icons">close</i>
-                    </button></mat-label>
+                <mat-label>Filtrar</mat-label>
 
                 <div class="search">
                     <mat-form-field appearance="outline" class="selectForm">
                         <mat-label>Buscar por</mat-label>
                         <mat-select id="buscaPor" [(ngModel)]="selectedSearch" name="buscaPor">
-                            <mat-option></mat-option>
                             <mat-option *ngFor="let item of fields" [value]="item">
                                 {{ item }}
                             </mat-option>
@@ -50,11 +24,8 @@
                             </button>
                         </div>
                         <div class="inputSearch" *ngIf="selectedSearch">
-                            <input matInput id="searchText" name="busca" placeholder="Buscar" autofocus #txt>
-                            <!-- <button mat-button *ngIf="txt.value" matSuffix mat-icon-button aria-label="Clear"                            
-                                (click)="doSearch('') || txt.value=''" tabindex=2>
-                                <i class="material-icons">close</i>
-                            </button> -->
+                            <input matInput id="searchText" name="busca" [(ngModel)]="inputedValue" placeholder="Buscar"
+                                autofocus #txt>
                             <button id="search" mat-button (click)="searchFilter(txt.value)">
                                 <mat-icon>search</mat-icon>
                             </button>
@@ -62,85 +33,119 @@
                     </mat-form-field>
                 </div>
             </div>
+
+            <div class="selectors">
+                <mat-label>Agrupar</mat-label>
+
+                <div class="grouping-selector">
+                    <mat-form-field appearance="outline" class="selectForm">
+                        <mat-label>Ambiente</mat-label>
+                        <mat-select id="ambiente" [(ngModel)]="selectedEnvironment" name="ambiente"
+                            (selectionChange)="groupEvents()">
+                            <mat-option *ngFor="let item of environments" [value]="item">
+                                {{ item }}
+                            </mat-option>
+                        </mat-select>
+                    </mat-form-field>
+
+                    <mat-form-field appearance="outline" class="selectForm">
+                        <mat-label>Ordenar por</mat-label>
+                        <mat-select id="ordem" [(ngModel)]="selectedOrderby" name="ordem"
+                            (selectionChange)="groupEvents()">
+                            <mat-option *ngFor="let item of orderFields" [value]="item">
+                                {{ item }}
+                            </mat-option>
+                        </mat-select>
+                    </mat-form-field>
+                </div>
+            </div>
+
+            <button mat-button (click)="limpar()">Limpar
+                <mat-icon>close</mat-icon>
+            </button>
+
         </div>
     </mat-card-subtitle>
     <mat-card-content>
-        <!-- <div>
-            <button mat-button>Arquivar</button>
-            <button mat-button>Apagar</button>            
-        </div> -->
+
+
         <mat-table [dataSource]="dataSource" class="mat-elevation-z8">
-            <!-- eventID Column -->
+
             <ng-container matColumnDef="eventID">
                 <mat-header-cell *matHeaderCellDef>Event ID </mat-header-cell>
                 <mat-cell *matCellDef="let element"> {{element.eventID}} </mat-cell>
             </ng-container>
 
-            <!-- level Column -->
+
             <ng-container matColumnDef="level">
                 <mat-header-cell *matHeaderCellDef> Level </mat-header-cell>
                 <mat-cell *matCellDef="let element"> {{element.level}} </mat-cell>
             </ng-container>
 
-            <!-- log Column -->
+
             <ng-container matColumnDef="log">
                 <mat-header-cell *matHeaderCellDef> Exceção </mat-header-cell>
                 <mat-cell *matCellDef="let element"> {{element.log}} </mat-cell>
             </ng-container>
 
-            <!-- environment Column -->
+
             <ng-container matColumnDef="environment">
                 <mat-header-cell *matHeaderCellDef> Ambiente </mat-header-cell>
                 <mat-cell *matCellDef="let element"> {{element.environment}} </mat-cell>
             </ng-container>
 
-            <!-- origin Column -->
             <ng-container matColumnDef="origin">
                 <mat-header-cell *matHeaderCellDef> Origem </mat-header-cell>
                 <mat-cell *matCellDef="let element"> {{element.origin}} </mat-cell>
             </ng-container>
 
-            <!-- details Column -->
-            <ng-container matColumnDef="details">
-                <mat-header-cell *matHeaderCellDef> Detalhes </mat-header-cell>
-                <mat-cell *matCellDef="let element">
-                    <button mat-button (click)="getEventDetails(element.eventID)">
-                        <i class="material-icons">info</i>
-                    </button>
-                </mat-cell>
-            </ng-container>
+            <div *ngIf="selectedEnvironment">
+                <ng-container matColumnDef="frequency">
+                    <mat-header-cell *matHeaderCellDef> Frequência </mat-header-cell>
+                    <mat-cell *matCellDef="let element"> {{element.frequency || 0}} </mat-cell>
+                </ng-container>
+            </div>
 
-            <!-- archive Column -->
-            <ng-container matColumnDef="archive">
-                <mat-header-cell *matHeaderCellDef> Arquivar </mat-header-cell>
-                <mat-cell *matCellDef="let element">
-                    <ng-container *ngIf="!element.archived">
-                        <button mat-button (click)="archiveEvent(element.eventID)">
-                            <i class="material-icons">archive</i>
+            <div *ngIf="!selectedEnvironment">
+                <ng-container matColumnDef="details">
+                    <mat-header-cell *matHeaderCellDef> Detalhes </mat-header-cell>
+                    <mat-cell *matCellDef="let element">
+                        <button mat-button (click)="getEventDetails(element.eventID)">
+                            <i class="material-icons" style="color:#52216E">info</i>
                         </button>
-                    </ng-container>
-                    <ng-container *ngIf="element.archived">
-                        <button mat-button disabled>
-                            <i class="material-icons">unarchive</i>
-                        </button>
-                    </ng-container>
-                </mat-cell>
-            </ng-container>
+                    </mat-cell>
+                </ng-container>
 
-            <!-- delete Column -->
-            <ng-container matColumnDef="delete">
-                <mat-header-cell *matHeaderCellDef> Remover </mat-header-cell>
-                <mat-cell *matCellDef="let element">
-                    <button mat-button (click)="deleteEvent(element.eventID)">
-                        <i class="material-icons">delete</i>
-                    </button>
-                </mat-cell>
-            </ng-container>
+                <ng-container matColumnDef="archive">
+                    <mat-header-cell *matHeaderCellDef> Arquivar </mat-header-cell>
+                    <mat-cell *matCellDef="let element">
+                        <ng-container *ngIf="!element.archived">
+                            <button mat-button (click)="archiveEvent(element.eventID)">
+                                <i class="material-icons" style="color:#F54F4F">archive</i>
+                            </button>
+                        </ng-container>
+                        <ng-container *ngIf="element.archived">
+                            <button mat-button disabled>
+                                <i class="material-icons" style="color:#FFD3A3">unarchive</i>
+                            </button>
+                        </ng-container>
+                    </mat-cell>
+                </ng-container>
+
+                <ng-container matColumnDef="delete">
+                    <mat-header-cell *matHeaderCellDef> Remover </mat-header-cell>
+                    <mat-cell *matCellDef="let element">
+                        <button mat-button (click)="deleteEvent(element.eventID)">
+                            <i class="material-icons" style="color:#BF2651">delete</i>
+                        </button>
+                    </mat-cell>
+                </ng-container>
+            </div>
 
             <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
             <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
         </mat-table>
-        <!-- <mat-paginator [length]="dataSource.length" [pageSize]="10" [pageSizeOptions]="[5, 10, 25, 100]" showFirstLastButtons></mat-paginator> -->
+
 
     </mat-card-content>
 </mat-card>
