--- a/src/app/core/error-page/error-page.component.css
+++ b/src/app/core/error-page/error-page.component.css
@@ -34,10 +34,18 @@
     display: flex;
     align-items: baseline;
     flex-direction: column;    
+    margin-right: 50px;
 }
 
 .search{
     flex: 1;
     display: flex;
     width: 100%;
+}
+
+
+.grouping-selector{
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
 }
